# MicroSwarm

./: .gitignore  CMakeLists.txt  README.md  dashboard.html
knowledge/: style_guide.txt
output/: Generated_20260113_114605.cpp  Generated_20260113_115115.cpp  Run_115753.py  Run_122300.py  Run_122305.py  Run_123025.py  Run_124009.py
src/: APIServer.h  Agent.h  LLMEngine.cpp  LLMEngine.h  SwarmOrchestrator.cpp  SwarmOrchestrator.h  main.cpp
tools/: search.py
